--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
  <html>
 <head>
 <title>Redirigir</title>
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://microserver.webcindario.com/">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://contraservlive.webcindario.com/">
 </head>
 <body>
